@@ -4,6 +4,14 @@ version 1.0.2
   as data frames but behave differently.
 - Fix: add_indicators() would fail or not add results properly in some
   cases. (Thanks to Jos de Waard for reporting #128).
+- Fix: 'as.data.frame' would fail for validator objects where at least 
+  one of the rules contained a var_group(). (Thanks to Matthias Gomolka
+  for reporting). The issue with 'var_group', and ':=' assignments is that 
+  the expanded list of expressions generated by a validator is not one-to-one 
+  with the original list of expressions in the validator. Therefore the
+  (internal) `$exprs()` method now adds an attribute to each expression
+  it outputs, called 'reference' that is an index into the original
+  validator object.
 - Fix: Parsing yaml files would crash when the 'expr' field is empty
   (Thanks to Matthias Gomolka for reporting).
 
